[package]
name = "rusterize"
version = "0.0.1"
authors = ["Colin Sherratt <colin.sherratt@gmail.com>"]

[lib]
name = "rusterize"
path = "src/lib.rs"

[dependencies]
genmesh = "*"
cgmath = "*"
threadpool = "*"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"


[[example]]
name = "monkey"
path = "examples/monkey.rs"

[[example]]
name = "cull"
path = "examples/cull.rs"

[dev-dependencies]
obj="*"
glfw="*"
time="*"
rand="*"
gfx="*"
gfx_device_gl="*"

[dev-dependencies.timeout_iter]
git="https://github.com/csherratt/timeout_iter"