[package]
name = "rusterize"
version = "0.0.1"
authors = ["Colin Sherratt <colin.sherratt@gmail.com>"]

[lib]
name = "rusterize"
path = "src/lib.rs"

[dependencies]
genmesh = "*"
cgmath = "*"
threadpool = "*"
num_cpus="*"
pulse = "*"
vec_map = "*"

[dependencies.image]
git = "https://github.com/PistonDevelopers/image"

[dependencies.snowstorm]
git = "https://github.com/csherratt/snowstorm"

[dependencies.future_pulse]
git = "https://github.com/csherratt/future_pulse"

[dependencies.fibe]
git = "https://github.com/kvark/fibe-rs.git"

[dev-dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dev-dependencies.gfx_device_gl]
git = "https://github.com/gfx-rs/gfx_device_gl"

[dev-dependencies.gfx_window_glfw]
git = "https://github.com/gfx-rs/gfx_window_glfw"

[dev-dependencies.pistoncore-sdl2_window]
git = "https://github.com/pistondevelopers/sdl2_window"

[dev-dependencies.piston2d-graphics]
git = "https://github.com/pistondevelopers/graphics"

[dev-dependencies.piston_window]
git = "https://github.com/pistondevelopers/piston_window"

[dev-dependencies.piston2d-opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics.git"

[dev-dependencies.piston]
git = "https://github.com/pistondevelopers/piston"

[dev-dependencies]
obj="*"
time="*"
rand="*"
